--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,18 @@
 .App {
   text-align: center;
+  background-color: lightsalmon;
 }
 
-.App-logo {
-  height: 10vmin;
-  pointer-events: none;
+.todo-list {
+  max-width: 90%;
+  margin: 5% 5%;
+  text-align: left;
+  padding: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-item {
+  padding: 2%;
+  margin: 2%;
+  background-color: rgb(255, 179, 149);
+  border: 1px solid rgb(219, 136, 104);
 }
