MOVE TodoAdder component to own file

--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -6,8 +6,7 @@
 }
 
 .todo-item,
-input.new-todo,
-button.new-todo {
+.todo-content {
   padding: 2%;
   margin: 2%;
   background-color: rgb(255, 179, 149);
